--- a/docs-src/src/web/servlet.html
+++ b/docs-src/src/web/servlet.html
@@ -32,7 +32,7 @@
         如同我们的项目 head.jsp 就包含在其 META-INF/resources 特定目录中，如插图所示
     </p>
     <div style="text-align: center;">
-        <img src="../../imgs/web/1.webp" />
+        <img src="../imgs/web/1.webp" />
     </div>
     <p>因为采用了 Jar 打包 jsp 分发的缘故，故所以你不能在 IDEA/Eclipse 里面按 Ctrl 键打开 head.jsp，最好的方法是关闭 IDE 验证的错误提示。</p>
 
